--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,7 +103,7 @@
   --bs-highlight-bg: #fff3cd;
   --bs-border-width: 1px;
   --bs-border-style: solid;
-  --bs-border-color: #dee2e6;
+  --bs-border-color: #09264E;
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
   --bs-border-radius: 0.375rem;
   --bs-border-radius-sm: 0.25rem;
@@ -3817,7 +3817,7 @@ textarea.form-control-lg {
   --bs-dropdown-spacer: 0.125rem;
   --bs-dropdown-font-size: 1rem;
   --bs-dropdown-color: var(--bs-body-color);
-  --bs-dropdown-bg: #226aa5;
+  --bs-dropdown-bg: #31444F;
   --bs-dropdown-border-color: var(--bs-border-color-translucent);
   --bs-dropdown-border-radius: var(--bs-border-radius);
   --bs-dropdown-border-width: var(--bs-border-width);
@@ -4389,7 +4389,7 @@ textarea.form-control-lg {
   --bs-navbar-brand-font-size: 1.25rem;
   --bs-navbar-brand-color: rgba(var(--bs-emphasis-color-rgb), 1);
   --bs-navbar-brand-hover-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-nav-link-padding-x: 0.5rem;
+  --bs-navbar-nav-link-padding-x: 1rem;
   --bs-navbar-toggler-padding-y: 0.25rem;
   --bs-navbar-toggler-padding-x: 0.75rem;
   --bs-navbar-toggler-font-size: 1.25rem;
@@ -4955,7 +4955,7 @@ textarea.form-control-lg {
   --bs-card-border-width: var(--bs-border-width);
   --bs-card-border-color: var(--bs-border-color-translucent);
   --bs-card-border-radius: var(--bs-border-radius);
-  --bs-card-box-shadow: ;
+  --bs-card-box-shadow: 0px 0px 5px 1px #0112FE;
   --bs-card-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
   --bs-card-cap-padding-y: 0.5rem;
   --bs-card-cap-padding-x: 1rem;
@@ -6749,10 +6749,10 @@ textarea.form-control-lg {
   margin-right: -100%;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  -webkit-transition: -webkit-transform 0.7s ease-in-out;
-  transition: -webkit-transform 0.7s ease-in-out;
-  transition: transform 0.7s ease-in-out;
-  transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out;
+  -webkit-transition: -webkit-transform 0.9s ease-in-out;
+  transition: -webkit-transform 0.9s ease-in-out;
+  transition: transform 0.9s ease-in-out;
+  transition: transform 0.9s ease-in-out, -webkit-transform 0.9s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-item {
@@ -6796,8 +6796,8 @@ textarea.form-control-lg {
 .carousel-fade .active.carousel-item-end {
   z-index: 0;
   opacity: 0;
-  -webkit-transition: opacity 0s 0.7s;
-  transition: opacity 0s 0.7s;
+  -webkit-transition: opacity 0s 0.9s;
+  transition: opacity 0s 0.9s;
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-fade .active.carousel-item-start,
@@ -6824,7 +6824,7 @@ textarea.form-control-lg {
           justify-content: center;
   width: 15%;
   padding: 0;
-  color: #fff;
+  color: #09264E;
   text-align: center;
   background: none;
   border: 0;
@@ -6842,7 +6842,7 @@ textarea.form-control-lg {
 .carousel-control-prev:hover, .carousel-control-prev:focus,
 .carousel-control-next:hover,
 .carousel-control-next:focus {
-  color: #fff;
+  color: #09264E;
   text-decoration: none;
   outline: 0;
   opacity: 0.9;
@@ -6879,11 +6879,11 @@ textarea.form-control-lg {
   } ]
 } */
 .carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2309264E'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
 }
 
 .carousel-control-next-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2309264E'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
 .carousel-indicators {
@@ -13441,12 +13441,88 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.nav-gradient-custom {
-  background: rgb(6, 63, 94);
-  background: -webkit-gradient(linear, left top, right top, from(rgb(6, 63, 94)), color-stop(35%, rgb(8, 35, 76)), to(rgba(21, 0, 59, 0.582)));
-  background: linear-gradient(90deg, rgb(6, 63, 94) 0%, rgb(8, 35, 76) 35%, rgba(21, 0, 59, 0.582) 100%);
+#header {
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
-.carousel > .carousel-inner > .carousel-item > .nav-link > img {
-  height: 680px;
+.nav {
+  -webkit-transition-timing-function: ease-in;
+          transition-timing-function: ease-in;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  margin-bottom: 0px !important;
+}
+
+.navbar {
+  -webkit-transition-timing-function: ease-in;
+          transition-timing-function: ease-in;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  margin-bottom: 0px !important;
+}
+
+.nav-gradient-custom {
+  background: rgb(6, 63, 94);
+  background: -webkit-gradient(linear, left top, right top, from(rgba(166, 12, 35, 0.2)), color-stop(35%, rgba(160, 170, 162, 0.6)), to(rgb(35, 55, 65)));
+  background: linear-gradient(90deg, rgba(166, 12, 35, 0.2) 0%, rgba(160, 170, 162, 0.6) 35%, rgb(35, 55, 65) 100%);
+}
+
+.carousel-inner > img {
+  height: 583px;
+}
+
+.container-home {
+  height: 100vh;
+  overflow: auto;
+  -ms-scroll-snap-type: y proximity;
+      scroll-snap-type: y proximity;
+}
+
+.carousel-container {
+  scroll-snap-align: start;
+}
+
+blockquote p {
+  font-size: 2rem !important;
+}
+
+.div-sony-container {
+  border-top: 2px solid #0112FE;
+  border-bottom: 2px solid #0112FE;
+  padding: auto;
+  scroll-snap-align: start;
+}
+
+.div-xbox-container {
+  border-top: 2px solid #117C11;
+  border-bottom: 2px solid #117C11;
+  padding: auto;
+  scroll-snap-align: start;
+}
+
+.card-sony-container {
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+}
+
+.card-xbox-container {
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+}
+
+.card-xbox-container > .row > .col > .card {
+  -webkit-box-shadow: 0px 0px 5px 1px #117C11;
+          box-shadow: 0px 0px 5px 1px #117C11;
 }/*# sourceMappingURL=styles.css.map */
